--- a/src/app/user-management/user-management.component.css
+++ b/src/app/user-management/user-management.component.css
@@ -1,4 +1,38 @@
-/* General Container */
+.navbar {
+  background-color: #007bff;
+  color: white;
+  padding: 1rem;
+}
+
+.navbar ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  gap: 1rem;
+}
+
+.navbar ul li {
+  display: inline;
+}
+
+.navbar ul li a {
+  color: white;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.navbar ul li a.active {
+  text-decoration: underline;
+}
+
+.content {
+  margin: 2rem;
+}
+
+
+
+
 .container {
     max-width: 1200px;
     margin: 0 auto;
