--- a/src/app/dyanamic-form/dyanamic-form.component.html
+++ b/src/app/dyanamic-form/dyanamic-form.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar">
   <ul>
-    <li><a routerLink="/system-management" routerLinkActive="active">Task 1</a></li>
-    <li><a routerLink="/dynamic" routerLinkActive="active">Task 2</a></li>
+    <li><a routerLink="/system-management" routerLinkActive="active">Manage System</a></li>
+    <li><a routerLink="/dynamic" routerLinkActive="active">Dynamic form</a></li>
   </ul>
 </nav>
 
