--- a/src/app/user-management/user-management.component.html
+++ b/src/app/user-management/user-management.component.html
@@ -1,8 +1,8 @@
 <div class="container">
   <nav class="navbar">
     <ul>
-      <li><a routerLink="/system-management" routerLinkActive="active">Task 1</a></li>
-      <li><a routerLink="/dynamic" routerLinkActive="active">Task 2</a></li>
+      <li><a routerLink="/system-management" routerLinkActive="active">Manage System</a></li>
+      <li><a routerLink="/dynamic" routerLinkActive="active">Dynamic form</a></li>
     </ul>
   </nav>
   <div class="header">
